# mutex-policy

./: CMakeLists.txt  syscalls.c
clients/: CMakeLists.txt  big_test.cpp  cmake_install.cmake  interactive_shell.cpp
common/: utils.cpp  utils.hpp
daemon/: CMakeLists.txt
daemon/src/: constants.hpp  daemonize.cpp  data_gatherer.cpp  data_gatherer.hpp  main.cpp  mtxpol_syscalls.hpp  mutex_data.hpp  mutex_policy.cpp  mutex_policy.hpp  mutex_policy_enforcer.cpp  mutex_policy_enforcer.hpp  mutex_status.cpp  mutex_status.hpp  polling_loop.cpp  polling_loop.hpp  request.cpp  request.hpp  request_manager.cpp
daemon/src/debug/: debug_shell.cpp  debug_shell.hpp  mock_syscall_lib.cpp  mock_syscall_lib.hpp  prettify.cpp  prettify.hpp
lib/: CMakeLists.txt
lib/include/: mtxpol.hpp  mtxpol_constants.hpp
lib/src/: communication.cpp  mtxpol.cpp  random.cpp
